--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="http://robinsonwebdev.com" target="_blank">My Portfolio</a>
         <a href="http://robinsonwebdev.com/#contact" target="_blank">Contact Me</a>
     </footer>
-    <script src='/js/main.js'></script>
-    <script src='/js/sort.js'></script>
+    <script src='js/main.js'></script>
+    <script src='js/sort.js'></script>
 </body>
 </html>
